--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "author": "",
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "pino": "^7.8.0",
+    "pino-pretty": "^7.5.3"
   }
 }
